fix barcode cutting off header and add logo

--- a/src/components/MemberForm.css
+++ b/src/components/MemberForm.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 .form {
     width: 4.23in;
     background-color: white;
@@ -12,8 +14,13 @@
 .header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     position: relative;
+    /* margin-left: 25%; */
+}
+
+.title {
+    margin-left: 25%;
 }
 
 .title > h3 {
@@ -32,8 +39,8 @@
 
 .barcode {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 5px;
 }
 
 .line {
@@ -70,4 +77,31 @@
     font-family: 'Anton', sans-serif;
     font-size: 12px;
     margin-top: 15px;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    /* margin-top: 10px; */
+}
+
+.emailLabel {
+    /* font-family: 'Anton', sans-serif; */
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2px;
+}
+
+.required {
+    color: red;
 }
